--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
+    "cursor-effects": "^1.0.11",
     "vue": "^2.6.11"
   },
   "devDependencies": {
